--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,9 @@
 # Force vi mode keys if $EDITOR is not explicity 'vi'
 setw -g mode-keys vi
 
-set -g default-terminal "screen-256color"
-set -sa terminal-overrides ',*256*:Tc'
+set-option -gs default-terminal "tmux-256color"
+set-option -gas terminal-overrides "*:Tc" # true color support
+set-option -gas terminal-overrides "*:RGB" # true color support
 
 unbind C-b
 set -g prefix C-z
