fix(ghostty): use up to date theme name for new version of ghostty

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,4 +1,4 @@
-theme = tokyonight-storm
+theme = TokyoNight Storm
 font-family = "FiraCode Nerd Font Mono"
 font-thicken = true
 bold-is-bright = true
